gcc-14.2.0/libgo/misc/cgo/errors/testdata/err4.go
version https://git-lfs.github.com/spec/v1
oid sha256:b7d79497f916ca09512ee266bdc3d70c60dec266b2989082d6873305e91d83f6
size 259
